valhalla test bed